# tip

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SPEC.md  justfile  tip-node.example.toml  trust-policy.example.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  pages.yml  release.yml
crates/tip-cli/: Cargo.toml
crates/tip-cli/src/: file_key_store.rs  main.rs
crates/tip-cli/tests/: cli_contract.rs  e2e_node.rs
crates/tip-core/: Cargo.toml
crates/tip-core/examples/: generate_test_vectors.rs
crates/tip-core/src/: lib.rs
crates/tip-core/src/crypto/: mod.rs
crates/tip-core/src/domain/: mod.rs
crates/tip-core/src/ports/: mod.rs
crates/tip-core/src/testing/: mod.rs
crates/tip-core/src/use_cases/: mod.rs
crates/tip-core/tests/: test_vectors.rs
crates/tip-node/: Cargo.toml
crates/tip-node/src/: config.rs  lib.rs  main.rs
crates/tip-node/src/adapters/: http_peer_event_client.rs  mod.rs  node_key_file.rs  sqlite_event_store.rs
crates/tip-node/src/http/: mod.rs
crates/tip-node/tests/: http_contract.rs  sync_e2e.rs
docs/: STATE.md
site/: index.html  style.css
test-vectors/: README.md  tip-0.1.json  tip-bundle-0.1.json
