[workspace]
members = [
    "crates/tip-core",
    "crates/tip-node",
    "crates/tip-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/nootr/tip"
rust-version = "1.78"

[workspace.dependencies]
anyhow = "1"
assert_cmd = "2"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
predicates = "3"
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_json_canonicalizer = "0.3"
sha2 = "0.10"
thiserror = "1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.5"
toml = "0.8"
axum = "0.7"
