[package]
name = "tip-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "tip"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tip-core = { path = "../tip-core" }
toml.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
tempfile.workspace = true
